--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-firebase-file-uploader": "^2.4.4",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.1",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-textarea-autosize": "^8.4.0",
